# redis-stack

./: .env  .gitignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.redis-stack  Dockerfile.redis-stack-server  LICENSE  LICENSE.txt  README.md  SECURITY.md  assemble.py  assemble.sh  config.yml  notarize.sh  pyproject.toml  requirements.txt  snapcraft.j2  tasks.py
.github/actions/: ARM_BUILD_AND_PACKAGE_REUSABLE.yml  REDISINSIGHT_WEB_REUSABLE.yml
.github/workflows/: APPIMAGE_REUSABLE.yml  ARM_BUILD_AND_PACKAGE_REUSABLE.yml  BUILD_AND_PACKAGE_REUSABLE.yml  DOCKER_REUSABLE.yml  REDISINSIGHT_WEB_REUSABLE.yml  REUSABLE_APPIMAGE.yml  REUSABLE_ARM64.yml  REUSABLE_REDISINSIGHT.yml  REUSABLE_SNAP.yml  REUSABLE_X64.yml  SNAP_REUSABLE.yml  TEST_REUSABLE.yml  flow-nightly.yml  flow-pullrequest-packaging.yml  flow-pullrequest-platforms.yml  flow-pullrequest.yml  nightly-credentialcheck.yml  nightly-docker.yml  nightly-edge-docker.yml  nightly_credential_check.yml  nightlyedgedocker.yml  packaging-appimage.yml  packaging-docker.yml  packaging-snap.yml  platform-amazonlinux2.yml  platform-bionic.yml  platform-bullseye.yml  platform-focal.yml  platform-jammy.yml  platform-m1.yml  platform-macos-arm.yml  platform-macos-intel.yml  platform-macos.yml  platform-rhel7.yml  platform-rhel8.yml  redis-stack.yml  redis.yml  release.yml  test_report.yml
binaries/macos-arm64/: libcrypto.dylib  libomp.dylib  libssl.dylib
binaries/macos-x86_64/: libcrypto.dylib  libomp.dylib  libssl.dylib
dockers/: Dockerfile.redis-stack  README.md  dockerfile.tmpl
envs/dockers/: README.md  dockerfile.tmpl
envs/vagrants/bionic/: Vagrantfile
envs/vagrants/bullseye/: Vagrantfile
envs/vagrants/centos7/: Vagrantfile
envs/vagrants/centos8/: Vagrantfile
envs/vagrants/focal/: Vagrantfile
envs/vagrants/jammy/: Vagrantfile
envs/vagrants/xenial/: Vagrantfile
etc/: RSAL_LICENSE  entitlements  entrypoint.redis-stack-server.sh  entrypoint.redis-stack.sh  entrypoint.sh  redis-stack-server  redis-stack-server.appimage  snapcraft.j2
etc/appimage/: redis-stack-server.desktop
etc/conf/: README  redis-stack-service.conf  redis-stack.conf
etc/envfiles/: insight.docker.env
etc/licenses/: APACHE_LICENSE
etc/package/: postinstall  postremove  preremove
etc/scripts/: entrypoint.redis-stack-server.sh  entrypoint.redis-stack.sh  entrypoint.sh  entrypoint.tmpl  redis-stack-server  redis-stack-server.Linux  redis-stack-server.macos
etc/services/: redis-stack-redis.service  redis-stack-server.service  redis-stack.plist  redis-stack.service  redisinsight.service
includes/: redisargs.incl
scripts/: entrypoint.sh  redis-stack-redis.service  redis-stack.service  redisinsight.service
scripts/conf/: redis-stack.conf
stack/: __init__.py  __main__.py  config.py  package.py  paths.py  test.py  utils.py
stack/components/: get.py  insight.py  modules.py  nodejs.py  redis.py  redisinsight.py
stack/recipes/: __init__.py  redis_stack.py  redis_stack_server.py  redis_tools.py  redisinsight.py
tests/integration/: conftest.py  test_package.py  test_services.py
tests/smoketest/: conftest.py  env.py  helpers.py  mixins.py  test_appimage.py  test_archlinux.py  test_baremetal.py  test_deb.py  test_deb_packages.py  test_debs.py  test_docker.py  test_docker_compose.py  test_dockers.py  test_osx.py  test_qemu.py  test_rpm.py  test_rpm_packages.py  test_rpms.py  test_snap.py  test_tars.py  test_xenial.py
vagrants/bionic/: Vagrantfile
vagrants/focal/: Vagrantfile
vagrants/xenial/: Vagrantfile
