[tool.poetry]
name = "redis-stack-tools"
version = "0.0.1"
description = "Tools, for building redis-stack"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
PyYAML = "^6.0"
isort = "^5.10.1"
Fabric = "^2.7.0"

[tool.poetry.dev-dependencies]
invoke = "^1.7.3"
requests = "^2.28.1"
loguru = "^0.6.0"
Jinja2 = "^3.0.3"
redis = "^4.3.4"
pytest = "^7.1.3"
docker = "^6.0.0"
flake8 = "^4.0.1"
black = "^22.10.0"

[tool.pytest.ini_options]
markers = [
    "xenial: ubuntu xenial tests",
    "bionic: ubuntu bionic tests",
    "focal: ubuntu focal tests",
    "bullseye: bullseye tests",
    "archlinux: archlinux tests",
    "amazonlinux2: amazonlinux2 (centos7 in reality) tests",
    "rhel7: RedHat 7 (rhel7) tests",
    "rhel8: RedHat 8 (rhel8) tests",
    "physical: run tests only within a vagrant image",
    "dockers_redis_stack: test the redis_stack docker",
    "dockers_redis_stack_server: test the redis_stack_server docker",
    "macos: osx specific tests",
    "snaps: test the snapcraft snaps",
    "arm: tests that run only on arm"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
